<resources>
    <string name="app_name">Chess Puzzle Book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="solve_puzzles">Solve puzzles</string>
    <string name="next_task">NEXT</string>
    <string name="correct">Correct!</string>
    <string name="correct_turn">Nice turn!</string>
    <string name="wrong_turn">Wrong turn! Try again.</string>
    <string name="show_turn">Show right turn</string>
    <string name="your_elo">Your elo:</string>
    <string name="task_target_elo">Task elo:</string>
    <string name="username">Lichess.com username</string>
    <string name="generate">Generate</string>
    <string name="nice_black_bishop">Nice black bishop</string>
    <string name="generate_games_of">Generate games of</string>
    <string name="from_last">from last</string>
    <string name="games">games</string>
    <string name="generate_puzzles">Generate puzzles</string>
    <string name="vs">vs</string>
</resources>